css tweek to fix spacing on ce button when adding new industries

--- a/SizeUp.Web/Content/widget/Views/competition/index.css
+++ b/SizeUp.Web/Content/widget/Views/competition/index.css
@@ -1,7 +1,7 @@
 ﻿#competition .tabs { width: 100%; }
 #competition .mapControls.container { top:0; width: 100%; border-top:1px dashed #ccc; padding:0; height:auto; background-color:#F5F5F5;}
-#competition .mapControls.container .filterMessage { width: 50%; display: inline-block; padding-left:1em; font-size:1.1em; line-height:1.6em;}
-#competition .mapControls.container .mapFilter.container ul li { padding: 0.1em; }
+#competition .mapControls.container .filterMessage { width: 50%; display: inline-block; padding-left:1em; font-size:1.1em; line-height:1.6em; margin:1em 0;}
+#competition .mapControls.container .mapFilter.container ul li { padding: 0; }
 #competition .mapControls.container .consumerExpenditures.container .menu { background-image: none; border-radius:0; box-shadow:none; background-color:#F9B354; }
 
 #competition .mapWrapper.container { width: 100%; margin:0; }
